Added inverted text

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,7 +159,7 @@ textarea {
   -ms-appearance: none;
   appearance: none;
 }
-/* KCZ additions */
+/* ----------------------------------------- KCZ additions ---------------------------------------------*/
 .logos {
   position: relative;
   overflow: hidden;
@@ -175,6 +175,11 @@ textarea {
   width: 120px;
   background-color: transparent;
   object-fit: contain;
+}
+
+.textInverted {
+  color: #000000;
+  background-color: #e6e6e6;
 }
 
 .long-line {
