--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1484,6 +1484,7 @@ body.is-preload #bg:before {
   transition-delay: 0.25s;
   padding: 3rem 2rem;
   max-height: 80rem;
+  max-width: 45rem;
   overflow: hidden;
   background-color: rgba(15, 15, 15, 0.37); /* Устанавливает темный цвет фона с прозрачностью 0.7 */
 }
